<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.toolkit.InfoTabActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/info_tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/info_tab_announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_tab_announcement" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/info_tab_lecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_tab_lecture" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/info_tab_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_tab_movie" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_tab_layout"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>