<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.toolkit.MovieInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_poster_iv"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_movie" />

            <TextView
                android:id="@+id/movie_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_poster_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_place_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_poster_iv"
                app:layout_constraintTop_toBottomOf="@+id/movie_time_tv" />

            <TextView
                android:id="@+id/movie_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_poster_iv"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/movie_type_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/movie_type"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movie_actors_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/movie_actors"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movie_douban_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_douban"
            android:drawablePadding="8dp"
            android:text="豆瓣"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/movie_storyline_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_storyline"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>